--- a/.github/workflows/w2-workflow-python-publish.yml
+++ b/.github/workflows/w2-workflow-python-publish.yml
@@ -147,6 +147,7 @@ jobs:
         # echo __version__='${{ steps.vars.outputs.THIS_VERSION }}' >> PKNSETools/__init__.py
         python3 setup.py clean build sdist bdist_wheel
         twine upload --verbose --repository-url https://test.pypi.org/legacy/ dist/*
+        
     - name: Publish distribution 📦 to PyPI
     
       if: ${{ needs.check_should_run.outputs.should_run != 'false' }}
@@ -162,3 +163,11 @@ jobs:
         # echo __version__='${{ steps.vars.outputs.THIS_VERSION }}' >> PKNSETools/__init__.py
         python3 setup.py clean build sdist bdist_wheel
         twine upload --verbose dist/*
+    
+    - name: Delete history of workflow runs
+      shell: bash
+      run: |
+        gh run list --status success --limit 100 --json databaseId -q '.[].databaseId' | xargs -IID gh api "repos/$(gh repo view --json nameWithOwner -q .nameWithOwner)/actions/runs/ID" -X DELETE
+        gh run list --status cancelled --limit 100 --json databaseId -q '.[].databaseId' | xargs -IID gh api "repos/$(gh repo view --json nameWithOwner -q .nameWithOwner)/actions/runs/ID" -X DELETE
+      env:
+        GH_TOKEN : ${{secrets.GITHUB_TOKEN}}
