write permission for workflow

--- a/.github/workflows/w2-workflow-python-publish.yml
+++ b/.github/workflows/w2-workflow-python-publish.yml
@@ -83,6 +83,7 @@ jobs:
 
     runs-on: windows-latest
     needs: check_should_run
+    permissions: write-all
     steps:
     - uses: actions/checkout@v2
       with:
